deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodeapp-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  namespace: nodeapp-dev
  labels:
    app: nodeapp

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: nodeapp
        image: paramahub/nodeapp:v5
        imagePullPolicy: "Always"
        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - '-c'
                - sleep 10s
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

            
---

apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  namespace: nodeapp-dev

spec:
  selector:
    app: nodeapp 
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
