nodeapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: nodeapp-dev
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
 ingressClassName: nginx
 rules:
 - http:
    paths:
    - path: /nodeapp
      pathType: Prefix
      backend:
        service:
          name: nodeapp-service
          port:
            number: 8080
